--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,9 +5,9 @@ on: push
 jobs:
   project-testing:
     runs-on: ubuntu-latest
-    
+
     env:
-      BUCKET_NAME: ${{ vars.BUCKET_NAME }}
+      BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
       AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
